feat: 6단계 로그인 유무로 헤더 변경